# workplace_reviews_app

./: README.md
eda/: metrics_eda.ipynb
experiments/: bertopic.ipynb
src/: app.py
src/work_culture/: utils.py
workplace-culture-samuel_koh_zk/: pyproject.toml  requirements.txt
workplace-culture-samuel_koh_zk/src/work_culture/: docx_to_csv.py  model.py
